src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Cliente</fullName>
        <description>Tipo de registro que especifica los candidatos para el tipo de registro Cliente</description>
        <isActive>true</isActive>
        <values>
            <fullName>1%2EMQL %E2%80%93 Nuevo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>2%2EMQL %E2%80%93 Abierto</fullName>
        </values>
        <values>
            <fullName>3%2EMQL - En Progreso</fullName>
        </values>
        <values>
            <fullName>4%2ERemarketing</fullName>
        </values>
        <values>
            <fullName>5%2ESQL</fullName>
        </values>
        <values>
            <fullName>6%2EDescartado</fullName>
        </values>
        <values>
            <fullName>7%2EConvertido</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Merchant</fullName>
        <description>Tipo de registro que especifica los candidatos para el tipo de registro Merchant</description>
        <isActive>true</isActive>
        <values>
            <fullName>1%2EMQL %E2%80%93 Nuevo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>2%2EMQL %E2%80%93 Abierto</fullName>
        </values>
        <values>
            <fullName>3%2EMQL - En Progreso</fullName>
        </values>
        <values>
            <fullName>4%2ERemarketing</fullName>
        </values>
        <values>
            <fullName>5%2ESQL</fullName>
        </values>
        <values>
            <fullName>6%2EDescartado</fullName>
        </values>
        <values>
            <fullName>7%2EConvertido</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Asignacion_de_reglas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asignación de reglas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fuente__c</fullName>
        <label>Fuente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Organic search</fullName>
                </value>
                <value>
                    <fullName>Paid search</fullName>
                </value>
                <value>
                    <fullName>Email marketing</fullName>
                </value>
                <value>
                    <fullName>Organic Social</fullName>
                </value>
                <value>
                    <fullName>Referrals</fullName>
                </value>
                <value>
                    <fullName>Other campaigns</fullName>
                </value>
                <value>
                    <fullName>Direct traffic</fullName>
                </value>
                <value>
                    <fullName>Offline sources</fullName>
                </value>
                <value>
                    <fullName>Paid social</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fuente_original__c</fullName>
        <label>Fuente original</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ORGANIC_SEARCH</fullName>
                    <label>Búsqueda orgánica</label>
                </value>
                <value>
                    <fullName>PAID_SEARCH</fullName>
                    <label>Búsqueda de pago</label>
                </value>
                <value>
                    <fullName>EMAIL_MARKETING</fullName>
                    <label>Email marketing</label>
                </value>
                <value>
                    <fullName>SOCIAL_MEDIA</fullName>
                    <label>Redes sociales</label>
                </value>
                <value>
                    <fullName>REFERRALS</fullName>
                    <label>Recomendaciones</label>
                </value>
                <value>
                    <fullName>OTHER_CAMPAIGNS</fullName>
                    <label>Otras campañas</label>
                </value>
                <value>
                    <fullName>DIRECT_TRAFFIC</fullName>
                    <label>Tráfico directo</label>
                </value>
                <value>
                    <fullName>OFFLINE</fullName>
                    <label>Fuentes sin conexión</label>
                </value>
                <value>
                    <fullName>PAID_SOCIAL</fullName>
                    <label>Redes sociales de pago</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Drill_1__c</fullName>
        <label>Original Drill 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Drill_2__c</fullName>
        <label>Original Drill 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDX_Anexo__c</fullName>
        <inlineHelpText>Anexo: máximo 5 números</inlineHelpText>
        <label>Anexo</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDX_Area__c</fullName>
        <description>Indica el área de trabajo del candidato</description>
        <label>Área</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comercial</fullName>
                </value>
                <value>
                    <fullName>Recursos Humanos</fullName>
                </value>
                <value>
                    <fullName>Logística</fullName>
                </value>
                <value>
                    <fullName>Finanzas - Contabilidad</fullName>
                </value>
                <value>
                    <fullName>Administración</fullName>
                </value>
                <value>
                    <fullName>Compras</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Operaciones</fullName>
                </value>
                <value>
                    <fullName>Producción - Manofactura</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Budget_mensual_estimado__c</fullName>
        <label>Budget mensual estimado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDX_Campana__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaña</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Candidatos</relationshipLabel>
        <relationshipName>Candidatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDX_Contactado__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo actualizado de manera automática cuando un Evento o tarea es marcado como completado.</description>
        <label>Contactado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDX_Departamento__c</fullName>
        <label>Departamento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SDXDepartamento</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Direccion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dirección</label>
        <referenceTo>SDX_Direccion__c</referenceTo>
        <relationshipLabel>Candidatos</relationshipLabel>
        <relationshipName>Candidatos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDX_GiroNegocioMerchant__c</fullName>
        <label>Giro de negocio merchant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Belleza</fullName>
                </value>
                <value>
                    <fullName>Bodegas</fullName>
                </value>
                <value>
                    <fullName>Farmacias</fullName>
                </value>
                <value>
                    <fullName>Fast Food y Restaurantes</fullName>
                </value>
                <value>
                    <fullName>Moda</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Peluquerías</fullName>
                </value>
                <value>
                    <fullName>Salud</fullName>
                </value>
                <value>
                    <fullName>Supermercado</fullName>
                </value>
                <value>
                    <fullName>Tecnología</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Medio__c</fullName>
        <description>Indica el medio de captura del candidato</description>
        <label>Medio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Google</fullName>
                </value>
                <value>
                    <fullName>Linkedin</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Blog</fullName>
                </value>
                <value>
                    <fullName>Teléfono</fullName>
                </value>
                <value>
                    <fullName>Eventos</fullName>
                </value>
                <value>
                    <fullName>Perú Top</fullName>
                </value>
                <value>
                    <fullName>Perú Pymes</fullName>
                </value>
                <value>
                    <fullName>CCL</fullName>
                </value>
                <value>
                    <fullName>Propia</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Referidos</fullName>
                </value>
                <value>
                    <fullName>Excliente Sodexo</fullName>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_MediosPago__c</fullName>
        <description>Indica el medio de pago del candidato</description>
        <label>Medios de pago</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Niubiz</fullName>
                </value>
                <value>
                    <fullName>Izzipay</fullName>
                </value>
                <value>
                    <fullName>Vale físico</fullName>
                    <isActive>false</isActive>
                    <label>Vale físico</label>
                </value>
                <value>
                    <fullName>Vale virtual</fullName>
                    <isActive>false</isActive>
                    <label>Vale virtual</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_MotivoNoConversion__c</fullName>
        <description>Indica el motivo de la no conversión del candidato</description>
        <label>Motivo Descarte</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Teléfono inexistente</fullName>
                </value>
                <value>
                    <fullName>RUC de baja</fullName>
                </value>
                <value>
                    <fullName>Empresa no existe</fullName>
                </value>
                <value>
                    <fullName>Contacto no existe</fullName>
                </value>
                <value>
                    <fullName>Correo erróneo</fullName>
                </value>
                <value>
                    <fullName>Personal curioso</fullName>
                </value>
                <value>
                    <fullName>Comisión</fullName>
                </value>
                <value>
                    <fullName>Fecha de pago</fullName>
                </value>
                <value>
                    <fullName>Falta de documentación</fullName>
                </value>
                <value>
                    <fullName>Desacuerdo con el sistema</fullName>
                </value>
                <value>
                    <fullName>Desinterés</fullName>
                </value>
                <value>
                    <fullName>No interesado</fullName>
                    <isActive>false</isActive>
                    <label>No interesado</label>
                </value>
                <value>
                    <fullName>No responden</fullName>
                    <isActive>false</isActive>
                    <label>No responden</label>
                </value>
                <value>
                    <fullName>Teléfono ocupado</fullName>
                    <isActive>false</isActive>
                    <label>Teléfono ocupado</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Necesidad_del__c</fullName>
        <description>Indica el producto o necesidad de interes del candidato</description>
        <label>Necesidad</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Food/Meal</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Gaso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_NombreComercial__c</fullName>
        <description>Indica el nombre comercial de la empresa del candidato</description>
        <label>Nombre comercial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDX_Producto__c</fullName>
        <label>Producto</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SDX_Segmento__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Food Pass</fullName>
                </value>
                <value>
                    <fullName>Restaurant Pass</fullName>
                </value>
                <value>
                    <fullName>Comedor Pass</fullName>
                </value>
                <value>
                    <fullName>Premium Pass Incentivo</fullName>
                </value>
                <value>
                    <fullName>Premium Pass Regalo</fullName>
                </value>
                <value>
                    <fullName>Premium Pass Navidad</fullName>
                </value>
                <value>
                    <fullName>Útiles Escolares Pass</fullName>
                </value>
                <value>
                    <fullName>Gaso Pass</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Provincia__c</fullName>
        <label>Provincia</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SDX_Departamento__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SDXProvincia</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Puesto__c</fullName>
        <description>Indica el puesto de trabajo del candidato</description>
        <label>Puesto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Analista</fullName>
                </value>
                <value>
                    <fullName>Asistente</fullName>
                </value>
                <value>
                    <fullName>Asistente Social</fullName>
                </value>
                <value>
                    <fullName>Auxiliar</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Gerente</fullName>
                </value>
                <value>
                    <fullName>Jefe</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>Practicante</fullName>
                </value>
                <value>
                    <fullName>Presidente</fullName>
                </value>
                <value>
                    <fullName>Secretaria</fullName>
                </value>
                <value>
                    <fullName>Subdirector</fullName>
                </value>
                <value>
                    <fullName>Vicepresidente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_PuntosVenta__c</fullName>
        <description>Indica el número del punto de venta</description>
        <inlineHelpText>Ingrese hasta 6 dígitos numéricos</inlineHelpText>
        <label>Puntos de venta</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDX_RUC__c</fullName>
        <description>Indica el numero RUC de la empresa donde trabaja el Candidato</description>
        <label>RUC</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDX_RecibeVales__c</fullName>
        <description>Indica si el candidato recibe Vales</description>
        <label>Recibe vales</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Físicos</fullName>
                </value>
                <value>
                    <fullName>Virtuales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Remarkerting__c</fullName>
        <label>Remarkerting</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Teléfono ocupado</fullName>
                </value>
                <value>
                    <fullName>No responden</fullName>
                </value>
                <value>
                    <fullName>No interesado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Segmento__c</fullName>
        <label>Segmento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Meal</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>External Estimulation</fullName>
                </value>
                <value>
                    <fullName>Fuel &amp; Fleet</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_TareasFinalizadas__c</fullName>
        <description>Totaliza el numero de tareas o eventos finalizadas</description>
        <label>Tareas finalizadas</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDX_TipoLector__c</fullName>
        <description>Indica si el candidato posee con lectores de barra</description>
        <label>Tipo de lector</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Barras</fullName>
                </value>
                <value>
                    <fullName>QR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDX_Zona__c</fullName>
        <formula>CASE(SDX_Departamento__c,
&quot;Apurímac&quot;, &quot;Sur&quot;,
&quot;Apurimacuto&quot;, &quot;Sur&quot;,
&quot;Arequipa&quot;, &quot;Sur&quot;,
&quot;Ayacucho&quot;, &quot;Sur&quot;,
&quot;Cusco&quot;, &quot;Sur&quot;,
&quot;Madre de Dios&quot;, &quot;Sur&quot;,
&quot;Moquegua&quot;,	&quot;Sur&quot;,
&quot;Puno&quot;, &quot;Sur&quot;,
&quot;Tacna&quot;,	&quot;Sur&quot;,
&quot;Áncash&quot;, &quot;Centro&quot;,
&quot;Huancavelica&quot;, &quot;Centro&quot;,
&quot;Huánuco&quot;, &quot;Centro&quot;,
&quot;Ica&quot;, &quot;Centro&quot;,
&quot;Junín&quot;, &quot;Centro&quot;,
&quot;Lima&quot;,	&quot;Centro&quot;,
&quot;Loreto&quot;,	&quot;Centro&quot;,
&quot;Pasco&quot;,	&quot;Centro&quot;,
&quot;Ucayali&quot;,	&quot;Centro&quot;,
&quot;Amazonas&quot;, &quot;Norte&quot;,
&quot;Cajamarca&quot;,	&quot;Norte&quot;,
&quot;La Libertad&quot;,	&quot;Norte&quot;,
&quot;Lambayeque&quot;,	&quot;Norte&quot;,
&quot;Piura&quot;,	&quot;Norte&quot;,
&quot;San Martín&quot;,	&quot;Norte&quot;,
&quot;Tumbes&quot;,	&quot;Norte&quot;,				
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zona</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segmento_Merchant__c</fullName>
        <label>Segmento Merchant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Segmento Merchant</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Meal</fullName>
                </value>
                <value>
                    <fullName>Gift</fullName>
                </value>
                <value>
                    <fullName>External Estimulation</fullName>
                </value>
                <value>
                    <fullName>Fuel &amp; Fleet</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Servicio__c</fullName>
        <label>Servicio</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SDX_Producto__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tarjeta</fullName>
                </value>
                <value>
                    <fullName>Vale</fullName>
                </value>
                <value>
                    <fullName>e-Vale</fullName>
                </value>
                <value>
                    <fullName>e-Commerce</fullName>
                </value>
                <value>
                    <fullName>Vale_Merchant</fullName>
                    <label>Vale Merchants</label>
                </value>
                <value>
                    <fullName>e-Vale Merchant</fullName>
                    <label>e-Vale Merchants</label>
                </value>
                <value>
                    <fullName>Vale y e-Vale Merchant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_lead__c</fullName>
        <label>Tipo de lead</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beneficiario</fullName>
                </value>
                <value>
                    <fullName>Merchant</fullName>
                </value>
                <value>
                    <fullName>Cliente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>Todos los candidatos abiertos</label>
    </listViews>
    <listViews>
        <fullName>Merchant_Junio</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>SDX_NombreComercial__c</columns>
        <columns>LEAD.MOBILE_PHONE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>SDX_Medio__c</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SDX_Medio__c</field>
            <operation>equals</operation>
            <value>Web</value>
        </filters>
        <filters>
            <field>SDX_Zona__c</field>
            <operation>equals</operation>
            <value>Centro</value>
        </filters>
        <label>Merchant Junio</label>
        <sharedTo>
            <role>Ejecutivo_Merchant</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Mis_Candidatos</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Mine</filterScope>
        <label>Mis Candidatos</label>
    </listViews>
    <listViews>
        <fullName>SDX_Ejecutivos_Licitaciones_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Ejecutivos Licitaciones</label>
        <queue>SDX_Ejecutivos_Licitaciones</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SDX_Ejecutivos_Merchants_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Merchant</label>
        <queue>SDX_Merchant</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SDX_Farmer_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Cliente Farmer</label>
        <queue>SDX_Cliente_Farmer</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SDX_Hunter_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Cliente_Hunter</label>
        <queue>SDX_Cliente_Hunter</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SDX_Representante_Ventas_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Representante Ventas</label>
        <queue>SDX_Representante_Ventas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SDX_Tele_Farmer_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Cliente Funter</label>
        <queue>SDX_Cliente_Funter</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SDX_Tele_Farmer_Lead1</fullName>
        <filterScope>Queue</filterScope>
        <label>Tele Farmer</label>
        <queue>SDX_Tele_Farmer</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SDX_Tele_Hunter_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Televentas</label>
        <queue>SDX_Televentas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SDX_Tele_Hunter_Lead1</fullName>
        <filterScope>Queue</filterScope>
        <label>Tele Hunter</label>
        <queue>SDX_Tele_Hunter</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Candidatos de hoy</label>
    </listViews>
    <recordTypes>
        <fullName>Cliente</fullName>
        <active>true</active>
        <businessProcess>Cliente</businessProcess>
        <description>Tipo de registro para proceso comercial de Cliente</description>
        <label>Cliente</label>
    </recordTypes>
    <recordTypes>
        <fullName>Merchant</fullName>
        <active>true</active>
        <businessProcess>Merchant</businessProcess>
        <description>Tipo de registro para proceso comercial de Merchant</description>
        <label>Merchant</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CA001_Validacion_Telefono_Int</fullName>
        <active>true</active>
        <description>Valida formato internacional del telefono</description>
        <errorConditionFormula>NOT(ISBLANK(Phone))  &amp;&amp;  
LEFT(Phone, 1) &lt;&gt; &quot;+&quot;</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>CA001: El número de teléfono móvil del candidato debe comenzar con + (código de país).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CA002_Validacion_Tel_Movil_Int</fullName>
        <active>true</active>
        <description>El número de teléfono móvil del candidato debe comenzar con + (código de país).</description>
        <errorConditionFormula>NOT(ISBLANK(MobilePhone)) &amp;&amp;
LEFT(MobilePhone, 1) &lt;&gt; &quot;+&quot;</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>CA002: El número de teléfono móvil debe comenzar con + seguido del código de país.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CA003_ValidacionDescarte</fullName>
        <active>true</active>
        <description>Valida que el motivo sea ingresado cuando el estado pase a ser &quot;&quot;No Convertido&quot;&quot;</description>
        <errorConditionFormula>AND( NOT(ISNEW()),
TEXT(Status)=&apos;6.Descartado&apos;,
ISBLANK (TEXT(SDX_MotivoNoConversion__c)))</errorConditionFormula>
        <errorDisplayField>SDX_MotivoNoConversion__c</errorDisplayField>
        <errorMessage>CA003: Debe indicar el campo &quot;Motivo de descarte&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CA004_Valida_Estado_Convertido</fullName>
        <active>true</active>
        <description>Valida el candidato si no estaba previamente en el estado 5.SQL</description>
        <errorConditionFormula>IF(
AND(
IsConverted = TRUE,
OR(
TEXT(PRIORVALUE(Status)) = &quot;1.MQL – Nuevo&quot;,
TEXT(PRIORVALUE(Status)) = &quot;2.MQL – Abierto&quot;,
TEXT(PRIORVALUE(Status)) = &quot;3.MQL - En Progreso&quot;,
TEXT(PRIORVALUE(Status)) = &quot;6.Descartado&quot;,
TEXT(PRIORVALUE(Status)) = &quot;4.Remarketing&quot;)),
true, false)</errorConditionFormula>
        <errorMessage>CA004: No puede transformar el candidato si previamente no estaba en etapa: 5.SQL</errorMessage>
    </validationRules>
</CustomObject>